<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">
    <!--
      android:lineSpacingExtra="0.5dp"
      android:letterSpacing="0.05"
      这两个设置行间距和字间距
      -->
    <TextView
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/gray4"
        android:lineSpacingExtra="0.5dp"
        android:letterSpacing="0.1"
        android:gravity="center"
        android:text="@string/note_title"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/note_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_title"
        android:orientation="horizontal"
        android:padding="10dp"
        android:textColor="@color/gray4"
        android:lineSpacingExtra="0.5dp"
        android:letterSpacing="0.1"
        android:gravity="center"
        android:text="@string/note_something"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom"
        android:background="@color/gray3"
        android:text="@string/setting_btn_des"
        android:gravity="center"
        android:padding="5dp"
        />

</RelativeLayout>