<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_text_des"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="10dp"
            />
        <!--   android:entries="@array/app_list"      -->
        <Spinner
            android:id="@+id/app_spinner"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/gray"
            android:spinnerMode="dropdown"
            android:visibility="gone"
            />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="10dp"
            android:layout_height="10dp"
            style="?android:attr/progressBarStyleSmall"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wake_time_des"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingRight="10dp"
            />
        <TextView
            android:id="@+id/add_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/add_btn_des"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <ListView
        android:id="@+id/show_time"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

</LinearLayout>